convertendo bibliotecas C pra objeto

--- a/sistemas_operacionais/Trabalho2/CMakeLists.txt
+++ b/sistemas_operacionais/Trabalho2/CMakeLists.txt
@@ -4,7 +4,7 @@ string(APPEND CMAKE_C_FLAGS "-Wunused-variable -Wall")
 set(CMAKE_C_STANDARD 99)
 project(SO)
 
-add_executable(SO ./disk.c ./ppos-core-task-aux.c ./pingpong-disco2.c ./ppos_disk.c)
+add_executable(SO ./ppos_disk.c)
 
-target_link_libraries(SO ${CMAKE_SOURCE_DIR}/queue.o ${CMAKE_SOURCE_DIR}/ppos-all.o rt)
+target_link_libraries(SO ${CMAKE_SOURCE_DIR}/pingpong-disco2.o ${CMAKE_SOURCE_DIR}/ppos-core-task-aux.o ${CMAKE_SOURCE_DIR}/disk.o ${CMAKE_SOURCE_DIR}/queue.o ${CMAKE_SOURCE_DIR}/ppos-all.o rt)
 
