--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,6 @@
 *.ipynb linguist-vendored
 *.env linguist-vendored
 */CMakeLists.txt linguist-vendored
+*/Makefile linguist-vendored
 *.gitattribures linguist-vendored
 *.gitignore linguist-vendored
