updade ignore atributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 *.html linguist-vendored
 *.ipynb linguist-vendored
 *.env linguist-vendored
-*/CMakeLists.txt linguist-vendored
-*/Makefile linguist-vendored
+**/CMakeLists.txt linguist-vendored
+**/Makefile linguist-vendored
 *.gitattribures linguist-vendored
 *.gitignore linguist-vendored
