--- a/sistemas_inteligentes/busca A estrela/CMakeLists.txt
+++ b/sistemas_inteligentes/busca A estrela/CMakeLists.txt
@@ -3,4 +3,9 @@ project(c__)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(c__ main.cpp comuns/PontosCardeais.hpp comuns/Labirinto.cpp comuns/Labirinto.hpp Ambiente/Model.cpp Ambiente/Model.hpp Ambiente/View.cpp Ambiente/View.hpp problema/Estado.cpp problema/Estado.hpp problema/Problema.cpp problema/Problema.hpp Agente.cpp Agente.hpp arvore/TreeNode.cpp arvore/TreeNode.hpp)
+add_executable(c__ main.cpp 
+              comuns/PontosCardeais.hpp comuns/Labirinto.o comuns/Labirinto.hpp 
+              Ambiente/Model.o Ambiente/Model.hpp Ambiente/View.o Ambiente/View.hpp
+              problema/Estado.o problema/Estado.hpp problema/Problema.o problema/Problema.hpp 
+              Agente.cpp Agente.hpp 
+              arvore/TreeNode.cpp arvore/TreeNode.hpp)
